crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_atrule_decls.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "AtKeyword",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 4
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 10
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "AtKeyword",
    "len": 6
  },
  {
    "kind": "LeftParen",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 10
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "AtKeyword",
    "len": 10
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 11
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "String",
    "len": 10
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "AtKeyword",
    "len": 9
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 5,
    "unit": "px"
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "AtKeyword",
    "len": 13
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 5,
    "unit": "px"
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
