crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_atrule_empty.snap
---
source: crates/csskit_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "AtKeyword",
    "len": 8
  },
  {
    "kind": "String",
    "len": 7
  },
  {
    "kind": "Semicolon",
    "len": 1
  }
]
