crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_atrule_no_params.snap
---
source: crates/csskit_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "AtKeyword",
    "len": 5
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
