crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_atrule_no_semicolon.snap
---
source: crates/csskit_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "AtKeyword",
    "len": 6
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "AtKeyword",
    "len": 8
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "AtKeyword",
    "len": 8
  },
  {
    "kind": "String",
    "len": 7
  }
]
