crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_atrule_params.snap
---
source: crates/csskit_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "AtKeyword",
    "len": 14
  },
  {
    "kind": "Function",
    "len": 4
  },
  {
    "kind": "String",
    "len": 15
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
