crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_colon_selector.snap
---
source: crates/csskit_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 10
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
