crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_comments.snap
---
source: crates/csskit_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Ident",
    "len": 3
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 13
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 3,
    "unit": "px"
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 3,
    "unit": "px"
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 2
  },
  {
    "kind": "Ident",
    "len": 4
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 3
  },
  {
    "kind": "LeftParen",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 8
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 11
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 10
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
