crates/css_lexer/tests/snapshots/postcss_snapshots__postcss_custom_properties.snap
---
source: crates/hdx_lexer/tests/postcss_snapshots.rs
expression: tokens
---
[
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 4
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 8
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Dimension",
    "len": 5,
    "unit": "vw"
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 7
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Hash",
    "len": 4
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 10
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Function",
    "len": 5
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 10
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Function",
    "len": 4
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 8
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "String",
    "len": 22
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 8
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "String",
    "len": 22
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 14
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "LeftSquare",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "RightSquare",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 13
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "LeftParen",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 8
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 8
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 8
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 8
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 9
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 8
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 15
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 6
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "LeftSquare",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "String",
    "len": 3
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "String",
    "len": 7
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "String",
    "len": 3
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "Comma",
    "len": 1
  },
  {
    "kind": "LeftSquare",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "RightSquare",
    "len": 1
  },
  {
    "kind": "RightSquare",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 12
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Function",
    "len": 9
  },
  {
    "kind": "Ident",
    "len": 4
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 7
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Function",
    "len": 4
  },
  {
    "kind": "Ident",
    "len": 4
  },
  {
    "kind": "RightParen",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "Semicolon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 4
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 3
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "Number",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 14
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 11
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  },
  {
    "kind": "Delim",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 5
  },
  {
    "kind": "LeftCurly",
    "len": 1
  },
  {
    "kind": "Ident",
    "len": 3
  },
  {
    "kind": "Colon",
    "len": 1
  },
  {
    "kind": "RightCurly",
    "len": 1
  }
]
